reuploaded files for lamp

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,7 @@
 <% include ./partials/head %>
 
-<h1>I am home</h1>
+<% include ./partials/header %>
+
+<h1 class='ui header'>I am home</h1>
 
 <% include ./partials/foot %>
